ref: move openapi spec into certeasy-backend-app
