# certeasy-backend-app/src/main/resources/META-INF/openapi.yaml
@@ -11,7 +11,7 @@ paths:
 
   /dn-attributes:
     get:
-      summary: List Distinguished Name attributes 
+      summary: List Distinguished Name attributes
       operationId: listAttributes
       description: Get List of attributes that may be used on the Certificate Subject Distinguished name. The attributes returned by this operation are expected to be used only when isuing custom certificates.
       tags:
@@ -20,33 +20,33 @@ paths:
         '200':
           description: An array of attributes
           content:
-            application/json:    
+            application/json:
               schema:
                 type: array
-                items: 
+                items:
                   type: object
                   properties:
-                    key: 
+                    key:
                       type: string
                       description: Unique identifier of the attribute
                       example: "common-name"
                     display_name:
                       type: string
-                      description: The name to be displayed on User interface 
+                      description: The name to be displayed on User interface
                       example: Common Name
                     description:
                       type: string
                       description: The purpose/intent of the attribute
                       example: The name used to refer to the subject
-                    repeatable: 
+                    repeatable:
                       type: boolean
                       description: Indicates wether the attribute may appear multiple times in a distinguished name
                       example: false
-                    max_items: 
+                    max_items:
                       type: integer
                       description: Maximum number of items allowed. Applicable only when attribute is multivalue
                       example: 3
-                    required: 
+                    required:
                       type: boolean
                       description: Indicates whether the attribute is required
                       example: true
@@ -60,7 +60,7 @@ paths:
         500:
           $ref: "#/components/responses/ServerError"
 
-  
+
   /authority/certificate/files:
     get:
       summary: Get CA Certificate files
@@ -80,7 +80,7 @@ paths:
           $ref:  "#/components/responses/CaCertificateNotFound"
         500:
           $ref: "#/components/responses/ServerError"
-       
+
 
 
   /authority/certificate:
@@ -110,14 +110,14 @@ paths:
       requestBody:
         content:
           multipart/form-data:
-            schema:      
+            schema:
               type: object
-              properties:  
-                cert_file:  
+              properties:
+                cert_file:
                   type: string
                   format: binary
                   description: The file containing the CA certificate PEM encoded
-                key_file: 
+                key_file:
                   type: string
                   format: binary
                   description: The file containing the CA private key PEM encoded
@@ -129,7 +129,7 @@ paths:
           description: Ca Certificate set successfully
         500:
           $ref: "#/components/responses/ServerError"
-          
+
     post:
       summary: Create Certificate Authority
       operationId: createCaCertificate
@@ -148,34 +148,26 @@ paths:
           description: CA Certificate created successfully
         500:
           $ref: "#/components/responses/ServerError"
-        
-      
 
-
-# /certificates
-# GET (Lists certificates)
-
-# /certificates/custom
-# POST
 
   /certificates/tls-server:
     post:
       summary: Issue TLS-Server certificate
       operationId: issueTlsServerCert
-      description: | 
-         Issues a new Certificate to identify a TLS-Server. An RSA Key-pair will be generated and used for the Certificate. 
-         The issued certificate will contain the following extensions:
+      description: |
+        Issues a new Certificate to identify a TLS-Server. An RSA Key-pair will be generated and used for the Certificate. 
+        The issued certificate will contain the following extensions:
+        
+        *Subject Alternative Name (Non Critical)*:
+         * The domain names provided
+        
+        *Key Usage (Critical)*:
+         * Digital Signature
+         * Key Encipherment
+        
+        *Extended Key Usage (Critical)*:
+         * TLS Web Server Authentication (OID 1.3.6.1.5.5.7.3.1)
 
-         *Subject Alternative Name (Non Critical)*:
-          * The domain names provided
-
-         *Key Usage (Critical)*:
-          * Digital Signature
-          * Key Encipherment
-         
-         *Extended Key Usage (Critical)*:
-          * TLS Web Server Authentication (OID 1.3.6.1.5.5.7.3.1)
-          
       tags:
         - Certificates
       requestBody:
@@ -188,25 +180,25 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/SuccessfullyIssuedCert'
-        400: 
+        400:
           $ref: '#/components/responses/ConstraintViolation'
         500:
           $ref: "#/components/responses/ServerError"
-          
-          
-  
+
+
+
   /certificates/personal:
     post:
       summary: Issue Personal Certificate
       operationId: issuePersonalCert
-      description: | 
+      description: |
         Issues a new Certificate to identify a person. An RSA Key-pair will be generated and used for the Certificate.
         The issued certificate will contain the following extensions:
 
           *Key Usage (Critical)*:
           * Digital Signature
           * Non Repudation
-         
+        
          *Extended Key Usage (Critical)*:
           * TLS Web Client Authentication (OID 1.3.6.1.5.5.7.3.2)
           * Code Signing (OID 1.3.6.1.5.5.7.3.3)
@@ -223,24 +215,24 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/SuccessfullyIssuedCert'
-        400: 
+        400:
           $ref: '#/components/responses/ConstraintViolation'
         500:
           $ref: "#/components/responses/ServerError"
-        
-        
+
+
   /certificates/employee:
     post:
       summary: Issue Employee Certificate
       operationId: issueEmployeeCert
-      description: | 
+      description: |
         Issues a new Certificate to identify an Employee of an organization. An RSA Key-pair will be generated and used for the Certificate.
         The issued certificate will contain the following extensions:
 
           *Key Usage (Critical)*:
           * Digital Signature
           * Non Repudation
-         
+        
          *Extended Key Usage (Critical)*:
           * TLS Web Client Authentication (OID 1.3.6.1.5.5.7.3.2)
           * Code Signing (OID 1.3.6.1.5.5.7.3.3)
@@ -258,17 +250,17 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/SuccessfullyIssuedCert'
-        400: 
+        400:
           $ref: '#/components/responses/ConstraintViolation'
         500:
           $ref: "#/components/responses/ServerError"
-          
-  
+
+
   /certificates/sub-ca:
     post:
       summary: Issue Sub Certificate-Authority Certificate
       operationId: issueSubCACert
-      description: | 
+      description: |
         Issues a Sub Certificate-Authority Certificate. An RSA Key-pair will be generated and used for the Certificate.
         The issued certificate will contain the following extensions:
 
@@ -277,7 +269,7 @@ paths:
           *Key Usage (Critical)*:
           * Certificate Sign
           * Sign CRL
-         
+
       tags:
         - Certificates
       requestBody:
@@ -290,12 +282,12 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/SuccessfullyIssuedCert'
-        400: 
+        400:
           $ref: '#/components/responses/ConstraintViolation'
         500:
           $ref: "#/components/responses/ServerError"
-          
-  
+
+
   /certificates/custom:
     post:
       summary: Issue Customized Certificate
@@ -313,12 +305,12 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/SuccessfullyIssuedCert'
-        400: 
+        400:
           $ref: '#/components/responses/ConstraintViolation'
         500:
           $ref: "#/components/responses/ServerError"
-          
-      
+
+
   /certificates:
     get:
       summary: List issued certificates
@@ -333,12 +325,12 @@ paths:
             application/json:
               schema:
                 type: array
-                items: 
+                items:
                   $ref: '#/components/schemas/IssuedCertSummary'
         500:
           $ref: "#/components/responses/ServerError"
-                  
-        
+
+
   /certificates/{serial}:
     get:
       summary: Get Certificate Information
@@ -346,7 +338,7 @@ paths:
       description: Get information of a certificate issued by the CA
       tags:
         - Certificates
-      parameters: 
+      parameters:
         - name: serial
           in: path
           description: The serial number of the certificate
@@ -360,7 +352,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/IssuedCertInfo'
-        404: 
+        404:
           $ref: '#/components/responses/CertificateNotFound'
         500:
           $ref: "#/components/responses/ServerError"
@@ -383,8 +375,8 @@ paths:
           $ref:  "#/components/responses/CertificateNotFound"
         500:
           $ref: "#/components/responses/ServerError"
-                
-    
+
+
 
 
 # /certificates/{serial}
@@ -401,7 +393,7 @@ components:
       type: object
       description: A Certificate Subject Alternative name
       properties:
-        type: 
+        type:
           type: string
           description: The type of alternative name
           enum:
@@ -418,8 +410,8 @@ components:
       required:
         - type
         - value
-        
-        
+
+
     KeyUsage:
       type: string
       description: Represents an peration for which the  Certificate public key is intended to be used.
@@ -433,8 +425,8 @@ components:
         - CertificateSign
         - SignCRL
         - NonRepudiation
-        
-    
+
+
     ExtendedKeyUsage:
       type: string
       description: A second degree of restriction in terms of how the public key of a Certificate is intended to be used
@@ -453,7 +445,7 @@ components:
       type: object
       description: The validity of a certificate
       properties:
-        from: 
+        from:
           type: string
           format: date
           description: The date from which the certificate is validate
@@ -492,15 +484,15 @@ components:
         - state
         - locality
         - street_address
-        
-    
+
+
     IssuedCertSummary:
       type: object
       description: A summary of a certificate issued by this server
       properties:
         name:
           type: string
-          description: Name of the issued certified. It is obtained from the Certificate Common-Name. 
+          description: Name of the issued certified. It is obtained from the Certificate Common-Name.
           example: my-cert
         serial:
           type: string
@@ -514,7 +506,7 @@ components:
         - name
         - serial
         - issue_date
-        
+
     IssuedCertInfo:
       allOf:
         - $ref: '#/components/schemas/IssuedCertSummary'
@@ -524,7 +516,7 @@ components:
           properties:
             key_algorithm:
               type: string
-              description: The Algorithm for which the Certificate Key-Pair was generated 
+              description: The Algorithm for which the Certificate Key-Pair was generated
               enum:
                 - RSA
                 - DSA
@@ -544,13 +536,13 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/KeyUsage'
-            extended_key_usage: 
+            extended_key_usage:
               type: array
               items:
                 $ref: '#/components/schemas/ExtendedKeyUsage'
             validity:
               $ref: '#/components/schemas/CertValidity'
-          
+
       required:
         - name
         - key_algorithm
@@ -560,7 +552,7 @@ components:
         - validity
         - issue_date
 
-      
+
 
     CaCertificate:
       type: object
@@ -596,8 +588,8 @@ components:
             - Medium
             - High
             - Very-High
-          
-    
+
+
     BaseCertificateRequestWithLocation:
       allOf:
         - $ref: '#/components/schemas/BaseCertificateRequest'
@@ -605,8 +597,8 @@ components:
           properties:
             location:
               $ref: '#/components/schemas/GeographicLocation'
-          
-      
+
+
 
     CustomCertificateRequest:
       allOf:
@@ -654,14 +646,14 @@ components:
               description: The subject alternative names to associate to the certificate
               items:
                 $ref: '#/components/schemas/SubjectAlternativeName'
-              
-              
+
+
           required:
             - validity
             - key_strength
             - subject_distinguished_name
             - key_usage
-      
+
 
     PersonalCertificateRequest:
       allOf:
@@ -673,21 +665,21 @@ components:
               type: string
               description: The person's first name
               example: Yaka
-            surname: 
+            surname:
               type: string
               description: The person's surname
               example: Matavele
-            telephone: 
+            telephone:
               type: string
               description: The person's telephone number
-            email_addresses: 
+            email_addresses:
               type: array
               description: The email addresses of the person
               items:
                 type: string
                 description: An email address
                 minItems: 1
-            usernames: 
+            usernames:
               type: array
               description: The usernames of the person. Computer and online usernames are expected to be Listed.
               items:
@@ -701,8 +693,8 @@ components:
             - first_name
             - surname
             - telephone
-    
-    
+
+
     EmployeeCertificateRequest:
       allOf:
         - $ref: "#/components/schemas/PersonalCertificateRequest"
@@ -721,7 +713,7 @@ components:
               required:
                 - name
                 - department
-    
+
     SubCACertificateRequest:
       allOf:
         - type: object
@@ -757,8 +749,8 @@ components:
             - validity
             - key_strength
             - location
-            
-            
+
+
     IssuedCert:
       type: object
       description: Represents an issued certificate
@@ -814,15 +806,15 @@ components:
             It may or may not yield further information if dereferenced.
 
   responses:
-  
+
     SuccessfullyIssuedCert:
       description: Certificate issued successfully
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/IssuedCert'
-      
-  
+
+
     ServerError:  # Can be referenced as '#/components/responses/ServerError'
       description: An error occurred.
       content:
@@ -834,8 +826,8 @@ components:
             title: Server error
             status: 500
             detail: An internal server error occurred
-      
-  
+
+
     ConstraintViolation:
       description: Constraint violation
       content:
@@ -867,24 +859,24 @@ components:
     CaCertificateNotFound:
       description: Not Found
       content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Problem'
-            example:
-              type: /problems/not-found
-              title: Not found
-              status: 404
-              detail: CA Certificate not found
-              
-              
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Problem'
+          example:
+            type: /problems/not-found
+            title: Not found
+            status: 404
+            detail: CA Certificate not found
+
+
     CertificateNotFound:
       description: Not Found
       content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Problem'
-            example:
-              type: /problems/not-found
-              title: Not found
-              status: 404
-              detail: Certificate not found          
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Problem'
+          example:
+            type: /problems/not-found
+            title: Not found
+            status: 404
+            detail: Certificate not found
